Upgrade hadoop common dependencies to support compile/runtime JDK17 support.